--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,16 +4,18 @@ html
     title #{title} - VIBE Emitter
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/bootstrap-theme.min.css')
+    link(rel='stylesheet', href='/stylesheets/slider.css')
+    link(rel='stylesheet', href='/stylesheets/style.css')
   body
     .container
       header
         h1 VIBE Emitter
-
-        button(data-action='loop', data-running-text='Collecting data', data-notrunning-text='Paused')
-
-        .control
-          label VIBE ID
-          input(type='text', data-info='id', value='dev-vibe')
+          button(class="btn btn-success" data-action='loop', data-running-text='Collecting data', data-notrunning-text='Paused')
+        .row
+          .col-md-3
+            .form-group
+              label(for="vibe-id") VIBE ID
+              input(type='text', class="form-control" id="vibe-id", data-info='id', value='dev-vibe')
 
 
       section.content
@@ -21,4 +23,5 @@ html
 
     script(src='/javascripts/jquery-2.1.1.min.js')
     script(src='/javascripts/bootstrap.min.js')
+    script(src='/javascripts/bootstrap-slider.js')
     script(src='/javascripts/main.js')
